force-app/main/default/objects/RD_Defferals__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Deferrals</relationshipLabel>
    <relationshipName>Deferrals</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>