force-app/main/default/objects/RD_Defferals__c/fields/Competitive__c.field-meta.xml
<CustomField>
    <fullName>Competitive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field should be checked is the deal is in a competitive situation. For example: a trial license that runs in parallel to another competitor&apos;s trial license.</description>
    <inlineHelpText>Are we in a competitive situation?</inlineHelpText>
    <label>Competitive?</label>
    <type>Checkbox</type>
</CustomField>