force-app/main/default/objects/RD_Defferals__c/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <description>Describes which competitor we are up against</description>
    <inlineHelpText>If applicable, please pick which competitor we are up against.</inlineHelpText>
    <label>Competitor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DTE Axiom</fullName>
            </value>
            <value>
                <fullName>Frayman Group</fullName>
            </value>
            <value>
                <fullName>Prosperoware</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Tikit Carpe Diem Enterprise</fullName>
            </value>
            <value>
                <fullName>Aderant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>