force-app/main/default/objects/RD_Defferals__c/fields/Contingent_Payment_Delayed__c.field-meta.xml
<CustomField>
    <fullName>Contingent_Payment_Delayed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contingency Type originally lived on the Contract object. We now need to be able to report better by using checkboxes and by making this live on the deferral object to allow for more granularity.</description>
    <inlineHelpText>IntApp has not yet received payment from the customer and can therefore not lift the contingency.</inlineHelpText>
    <label>Contingent - Payment Delayed</label>
    <type>Checkbox</type>
</CustomField>