force-app/main/default/objects/RD_Defferals__c/fields/Contingent_ROR__c.field-meta.xml
<CustomField>
    <fullName>Contingent_ROR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contingency Type originally lived on the Contract object. We now need to be able to report better by using checkboxes and by making this live on the deferral object to allow for more granularity.</description>
    <inlineHelpText>The customer has a right of return until a specific date outlined in the contract. By default, if no action taken by the customer, the product remains &apos;owned&apos; by the customer.</inlineHelpText>
    <label>Contingent - ROR</label>
    <type>Checkbox</type>
</CustomField>