force-app/main/default/objects/RD_Defferals__c/fields/Contingent_Services__c.field-meta.xml
<CustomField>
    <fullName>Contingent_Services__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contingency Type originally lived on the Contract object. We now need to be able to report better by using checkboxes and by making this live on the deferral object to allow for more granularity.</description>
    <inlineHelpText>The customer has a right of return that is contingent upon specific services deliverables. For example, a customer has a right of return for 30 days after go-live.</inlineHelpText>
    <label>Contingent - Services</label>
    <type>Checkbox</type>
</CustomField>