force-app/main/default/objects/RD_Defferals__c/fields/Contingent_Software__c.field-meta.xml
<CustomField>
    <fullName>Contingent_Software__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contingency Type originally lived on the Contract object. We now need to be able to report better by using checkboxes and by making this live on the deferral object to allow for more granularity.</description>
    <inlineHelpText>IntApp has a contractual agreement to deliver specific product features by a date outlined in the contract.</inlineHelpText>
    <label>Contingent - Software</label>
    <type>Checkbox</type>
</CustomField>