force-app/main/default/objects/RD_Defferals__c/fields/Contingent_T_C__c.field-meta.xml
<CustomField>
    <fullName>Contingent_T_C__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contingency Type originally lived on the Contract object. We now need to be able to report better by using checkboxes and by making this live on the deferral object to allow for more granularity.</description>
    <inlineHelpText>The customer has the right to certain Terms &amp; Conditions if negotiated by a certain date.</inlineHelpText>
    <label>Contingent - T&amp;C</label>
    <type>Checkbox</type>
</CustomField>