force-app/main/default/objects/RD_Defferals__c/fields/Deferral_Status__c.field-meta.xml
<CustomField>
    <fullName>Deferral_Status__c</fullName>
    <label>Deferral Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Pending Close Approval</fullName>
            </value>
            <value>
                <fullName>Closed - Won</fullName>
            </value>
            <value>
                <fullName>Closed - Lost</fullName>
            </value>
            <value>
                <fullName>Closed - Superseded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>