force-app/main/default/objects/RD_Defferals__c/fields/RD_Amount__c.field-meta.xml
<CustomField>
    <fullName>RD_Amount__c</fullName>
    <label>Total Recurring Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>