force-app/main/default/objects/RD_Defferals__c/fields/Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Signed_Date__c</fullName>
    <formula>Contract__r.EndDate</formula>
    <label>Contract Signed Date</label>
    <type>Date</type>
</CustomField>